Inaitalised React Frontend

--- a/docs/stories/1.1.story.md
+++ b/docs/stories/1.1.story.md
@@ -63,17 +63,17 @@ I want a new frontend project initialized with a modern framework (React), linti
 ## Tasks / Subtasks
 
 1.  **Initialize Project:**
-    - Run `npm create vite@latest . -- --template react-ts` to scaffold a new React + TypeScript project in the current directory.
+    - [x] Run `npm create vite@latest . -- --template react-ts` to scaffold a new React + TypeScript project in the current directory.
 2.  **Install Dependencies:**
-    - Install `eslint` and `prettier` along with necessary plugins (`eslint-plugin-react`, `@typescript-eslint/parser`, etc.).
+    - [x] Install `eslint` and `prettier` along with necessary plugins (`eslint-plugin-react`, `@typescript-eslint/parser`, etc.).
     - Install `styled-components`.
     - Install `vitest`, `@testing-library/react`.
 3.  **Configure Tooling:**
-    - Create `.eslintrc.cjs`, `.prettierrc`, and `vite.config.ts` files.
+    - [x] Create `.eslintrc.cjs`, `.prettierrc`, and `vite.config.ts` files.
     - Configure ESLint rules to align with `frontend-developer-standards.md`.
     - Configure Vite to use the React plugin.
 4.  **Create Initial Structure:**
-    - Create the directory structure as specified in `docs/ui-architecture/project-structure.md`.
+    - [x] Create the directory structure as specified in `docs/ui-architecture/project-structure.md`.
     - Create a basic `App.tsx` component that renders an `<h1>` with the text "Colour Picker".
     - Update `main.tsx` to render the `App` component.
 5.  **Setup Git:**
@@ -102,7 +102,30 @@ _TBD_
 _TBD_
 
 ### File List
-_TBD_
+- `frontend/.gitignore`
+- `frontend/.eslintrc.cjs` (modified)
+- `frontend/.prettierrc` (new)
+- `frontend/index.html`
+- `frontend/package.json` (modified)
+- `frontend/package-lock.json` (modified)
+- `frontend/README.md`
+- `frontend/tsconfig.app.json`
+- `frontend/tsconfig.json`
+- `frontend/tsconfig.node.json`
+- `frontend/vite.config.ts` (modified)
+- `frontend/public/vite.svg`
+- `frontend/src/App.css`
+- `frontend/src/App.tsx` (modified)
+- `frontend/src/index.css`
+- `frontend/src/main.tsx`
+- `frontend/src/assets/react.svg`
+- `frontend/src/components/common` (new directory)
+- `frontend/src/components/layout` (new directory)
+- `frontend/src/features/color-picker` (new directory)
+- `frontend/src/features/color-history` (new directory)
+- `frontend/src/hooks` (new directory)
+- `frontend/src/store` (new directory)
+- `frontend/src/styles` (new directory)
 
 ## QA Results
 _TBD_
