--- a/docs/stories/1.2.scheme-generation.md
+++ b/docs/stories/1.2.scheme-generation.md
@@ -94,6 +94,8 @@ export function generateScheme(seed: Color, scheme: SchemeId, opts?: {
 |------|---------|-------------|--------|
 | 2025-10-04 | 1.0 | Initial story creation | Scrum Master |
 | 2025-10-04 | 1.1 | PO validation approved; status set to Approved | Product Owner |
+| 2025-10-04 | 1.2 | Implemented; tests passing; moved to Ready for Review | Dev Agent |
+| 2025-10-04 | 1.3 | QA PASS gate; story marked Done | Scrum Master |
 
 ## Dev Agent Record
 ### Agent Model Used
