--- a/docs/stories/1.3.gradient-builder-foundation.md
+++ b/docs/stories/1.3.gradient-builder-foundation.md
@@ -83,6 +83,8 @@ export function generateGradient(stops: Color[], kind: 'linear'|'radial', opts?:
 |------|---------|-------------|--------|
 | 2025-10-04 | 1.0 | Initial story creation | Scrum Master |
 | 2025-10-04 | 1.1 | PO validation approved; status set to Approved | Product Owner |
+| 2025-10-04 | 1.2 | Implemented; tests passing; moved to Ready for Review | Dev Agent |
+| 2025-10-04 | 1.3 | QA PASS gate; story marked Done | Scrum Master |
 
 ## Dev Agent Record
 *This section will be populated by the development agent during implementation*
